--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,6 +57,11 @@ header {
 
 .body{
     min-height: 90vh;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 
