--- a/styles/detailsProduct.css
+++ b/styles/detailsProduct.css
@@ -1,23 +1,22 @@
-
 .container {
     max-width: 800px;
     margin: 4em auto;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+
 }
 
-h1 {
+h2 {
     font-size: 24px;
 }
 
-.product-image {
-    max-width: 100%;
-    height: auto;
-}
-
-.product-details {
+#product-details {
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .product-price {
