--- a/styles/detailsProduct.css
+++ b/styles/detailsProduct.css
@@ -1,22 +1,18 @@
 .container {
-    max-width: 800px;
-    margin: 4em auto;
+    max-width: 100%;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-
+    text-align: center;
 }
 
 h2 {
     font-size: 24px;
+    margin: 0;
 }
 
 #product-details {
     margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .product-price {
@@ -35,9 +31,50 @@ h2 {
     cursor: pointer;
     font-size: 16px;
     border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 /* Estilo al pasar el cursor sobre el botón */
 .add-to-cart:hover {
     background-color: #d81b5d;
+}
+
+/* Estilos para pantallas más pequeñas */
+@media screen and (max-width: 600px) {
+    .container {
+        padding: 10px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    .product-price {
+        font-size: 18px;
+    }
+
+    .add-to-cart {
+        font-size: 14px;
+    }
+}
+
+/* Estilos para pantallas muy pequeñas */
+@media screen and (max-width: 400px) {
+    h2 {
+        font-size: 18px;
+    }
+
+    .product-price {
+        font-size: 16px;
+    }
+
+    .add-to-cart {
+        font-size: 12px;
+    }
+}
+
+/* Hacer las imágenes responsivas */
+img {
+    max-width: 100%;
+    height: auto;
 }
