--- a/styles/detailsProduct.css
+++ b/styles/detailsProduct.css
@@ -1,80 +1,95 @@
 .container {
-    max-width: 100%;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-    text-align: center;
+  max-width: 50%;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  margin-bottom: 2em;
 }
 
 h2 {
-    font-size: 24px;
-    margin: 0;
+  font-size: 24px;
+  margin: 0;
+}
+.detalle-price {
+  color: #777;
 }
 
 #product-details {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .product-price {
-    font-weight: bold;
-    color: #e91e63;
-    font-size: 20px;
+  font-weight: bold;
+  color: #e91e63;
+  font-size: 20px;
 }
 
 /* Botón "Añadir al carrito" */
 .add-to-cart {
-    display: inline-block;
-    background-color: #e91e63;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+  display: inline-block;
+  background-color: #e91e63;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
-/* Estilo al pasar el cursor sobre el botón */
 .add-to-cart:hover {
-    background-color: #d81b5d;
+  background-color: #d81b5d;
 }
 
-/* Estilos para pantallas más pequeñas */
-@media screen and (max-width: 600px) {
-    .container {
-        padding: 10px;
-    }
-
-    h2 {
-        font-size: 20px;
-    }
-
-    .product-price {
-        font-size: 18px;
-    }
-
-    .add-to-cart {
-        font-size: 14px;
-    }
+@media (max-width: 1050px) {
+  .container,
+  .container h2,
+  .container button {
+    max-width: 90%;
+    font-size: medium;
+  }
+}
+@media (max-width: 800px) {
+  #product-details img {
+    width: 30em;
+  }
+  /* .container {
+        max-width: 90%;
+    } */
+}
+@media (max-width: 550px) {
+  .container,
+  .container h2,
+  .container button {
+    font-size: small;
+  }
+  #product-details img {
+    width: 95%;
+  }
 }
 
 /* Estilos para pantallas muy pequeñas */
 @media screen and (max-width: 400px) {
-    h2 {
-        font-size: 18px;
-    }
-
-    .product-price {
-        font-size: 16px;
-    }
-
-    .add-to-cart {
-        font-size: 12px;
-    }
+  #product-details img {
+    width: 15em;
+  }
 }
+@media (max-width: 550px) {
+
+    #product-details img {
+      width: 100%;
+    }
+  }
 
 /* Hacer las imágenes responsivas */
-img {
-    max-width: 100%;
-    height: auto;
+#product-details img {
+  padding: 10px;
+  max-width: 30em;
+  height: auto;
+  margin-bottom: 2em;
+}
+
+p + p {
+  padding: 2em;
 }
