--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,89 +1,95 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* Estilos para el encabezado */
 header {
-    background-color: #333; /* Cambia este color según tus preferencias */
-    color: #fff; /* Color del texto */
-    padding: 10px 0; /* Espaciado interior del encabezado */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 10em;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5em;
 }
 
 /* Estilos para el logotipo */
 
-.logo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5em;
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5em;
 }
-.logo .urvar{
-    padding: 0em 0.5em;
-    font-size: large;
+.logo .urvar {
+  padding: 0em 0.5em;
+  font-size: large;
 }
 
 .logo img {
-    max-width: 50px;
-    max-height: 50px; /* Ajusta el tamaño máximo de tu logotipo */
+  max-width: 50px;
+  max-height: 50px;
 }
-
 
 /* Estilos para el menú */
 .menu ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
-
-.menu li {
-    margin-right: 20px; /* Espacio entre elementos del menú */
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  margin-right: 10px;
 }
 
 .menu a {
-    color: #fff; /* Color del texto del menú */
-    text-decoration: none; /* Quita el subrayado de los enlaces */
+  color: #fff;
+  text-decoration: none;
+  padding: 1.5em;
 }
 
 .menu a:hover {
-    text-decoration: underline; /* Subrayado al pasar el cursor sobre los enlaces */
+  background-color: black;
+  transition: 0.4s ease;
 }
 
-.body{
-    min-height: 90vh;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
+.body {
+  min-height: 90vh;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 footer {
-    background-color: #333; /* Cambia este color según tus preferencias */
-    color: #fff; /* Color del texto */
-    padding: 10px 0; /* Espaciado interior del footer */
-    text-align: center;
-    bottom: 0;
-    height: 10em;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0; /* Espaciado interior del footer */
+  text-align: center;
+  bottom: 0;
+  height: 10em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 /* Estilos para el texto de copyright */
 .copyright {
-    font-size: 14px; /* Tamaño de fuente para el copyright */
+  font-size: 14px;
 }
 
 /* Estilos para los detalles de contacto */
 .contacto {
-    font-size: 12px; /* Tamaño de fuente para los detalles de contacto */
+  font-size: 12px;
+}
+
+@media (max-width: 400px) {
+  .menu a {
+    padding: 0.5em;
+  }
+  header, .logo p {
+    font-size:small
+  }
 }
