--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,7 @@ header {
 footer {
   background-color: #333;
   color: #fff;
-  padding: 10px 0; /* Espaciado interior del footer */
+  padding: 10px 0;
   text-align: center;
   bottom: 0;
   height: 10em;
