--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,6 +84,13 @@ footer {
 .contacto {
   font-size: 12px;
 }
+.contacto a{
+  text-decoration: none;
+  color: #9b9b9b;
+}
+.contacto a:hover{
+  text-decoration: underline;
+}
 
 @media (max-width: 400px) {
   .menu a {
